--- a/style.css
+++ b/style.css
@@ -1,28 +1,11 @@
-html, body {
-  font-family: arial;
-  margin: 0;
-  width: 100%;
-  height: 100%;
+y@import url('https://fonts.googleapis.com/css?family=Lato&display=swap');
+body {
+  font-family:'lato',sans-serif;
 }
-
-h1 {
-  font-size: 48px;
-}
-
-p {
-  max-width: 65%;
-  min-width: 500px;
-}
-
-h2 {
-  text-align: center;
-  font-size: 30px;
-}
-
-div {
-  padding-right: 30px;
-  height: 100%;
-  width: 100%;
+.logo {
+  margin-left:auto;
+  margin-right:auto;
+  display:block;
 }
 .header {
  width:100%;
@@ -32,3 +15,62 @@ div {
  text-align:center;
  font-size:2em;
  padding-top:15px;
+}
+.back {
+  width:10%;
+  background-color:#f59842;
+  height:50px;
+  color:black;
+  padding-top:5px;
+  position:absolute;
+  right:80px;
+  top:20px;
+  -webkit-transition:all 0.5s;
+}
+.back:hover {
+  background-color:white;
+  color:red;
+}
+.sidebar {
+width:200px;
+background-color:white;
+padding:30px;
+position:absolute;
+left:-200px;
+-webkit-transition:all 1s;
+}
+.sidebar:hover {
+  left:0px;
+}
+.arrow {
+  float:right;
+  width:10%;
+  padding-right:-10px;
+}
+.sidebar a {
+  text-decoration:none;
+  color:black;
+  -webkit-transition:all 0.5s;
+}
+.sidebar a:hover {
+  background-color:lightgray;
+  padding:10px;
+}
+.textpage1 {
+  width:30%;
+  background-color:red;
+  height:82%;
+  margin-left:auto;
+  margin-right:auto;
+  text-align:center;
+  padding:10px;
+  font-size:20px;
+}
+.text {
+  width:30%;
+  height:82%;
+  float:left;
+  background-color:red;
+  text-align:center;
+  padding:10px;
+  font-size:20px;
